# tapdance

./: .gitignore  .noseids  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yml  manual_docker_build_push.yml  master-publish.yml
docker/: README.md  singer-plugin.Dockerfile  singer_index.yml  tap-mssql.Dockerfile  tap-to-target-w-custom-tap.Dockerfile  tap-to-target.Dockerfile
docs/: README.md  authoring_rules.md  config_files.md  docker.md  environment_variables.md  tutorial.md
samples/: infra-config.yml
samples/infra/01-covid-19-to-s3-csv/: 00_environment.tf  02_singer-taps.tf  infra-config.yml
samples/infra/02-covid-19-to-postgres/: 00_environment.tf  02_postgres.tf  03_singer-taps.tf  infra-config.yml
samples/infra/02-covid-19-to-redshift/: 00_environment.tf  01_redshift.tf  02_singer-taps.tf
samples/infra/03-covid-19-to-redshift/: 00_environment.tf  01_data-lake.tf  02_redshift.tf  03_singer-taps.tf  infra-config.yml
samples/infra/04-covid-19-to-s3-to-redshift/: 00_environment.tf  02_redshift.tf  03_tap-to-redshift.tf  infra-config.yml
samples/pardot-to-s3/infra/: 02_singer-taps.tf
samples/taps/covid-19/: covid-19.plan.yml  covid-19.rules.txt  data-plan-covid-19.yml  data.select
samples/taps/covid-19-to-s3/.secrets/: README.md  tap-covid-19.json.template
samples/taps/pardot/: data-plan-pardot.yml  pardot.rules.txt
samples/taps/pardot-to-s3/.secrets/: tap-pardot-config.json.template
samples/taps/salesforce/: data-plan-salesforce.yml  data.select  salesforce.rules.txt
tapdance/: __init__.py  cli.py  config.py  docker.py  install_helper.py  plan.py  plans.py  profile.py  states.py  sync.py  syncs.py  taputils.py
tests/: test_build.py  test_covid_tap.py  test_version.py
